--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
+    "react-device-detect": "^2.2.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.2",
